--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "devDeploy": "npm run build && firebase hosting:channel:deploy devBuild",
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
